--- a/style.css
+++ b/style.css
@@ -24,12 +24,15 @@ html {
   background-color: hsl(36, 100%, 99%);
 }
 body {
+  height: 100vh;
   display: flex;
   justify-content: center;
 }
 .container {
   margin-top: 8rem;
   width: 65%;
+  display: flex;
+  flex-direction: column;
 }
 .header {
   display: flex;
@@ -49,15 +52,18 @@ body {
   color: hsl(236, 13%, 42%);
   text-decoration: none;
 }
+.main-nav a:hover {
+  color: hsl(5, 85%, 63%);
+}
 .main {
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 7fr 3fr;
   row-gap: 3rem;
   column-gap: 2.4rem;
 }
 .main-article {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 48fr 52fr;
   row-gap: 2rem;
   column-gap: 5rem;
 }
@@ -77,7 +83,7 @@ picture {
   flex-direction: column;
 }
 .main-article-text {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   margin-bottom: 2rem;
   line-height: 1.5;
 }
@@ -93,6 +99,10 @@ picture {
   padding: 1.2rem 2.4rem;
   margin-top: auto;
 }
+.main-article-link:hover {
+  background-color: hsl(240, 100%, 5%);
+  color: hsl(36, 100%, 99%);
+}
 aside {
   background-color: hsl(240, 100%, 5%);
   color: hsl(36, 100%, 99%);
@@ -107,7 +117,15 @@ aside {
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 4rem;
+  gap: 2.4rem;
+}
+.news-list li {
+  border-bottom: 0.5px solid hsl(233, 8%, 79%);
+  padding-bottom: 2.4rem;
+}
+.news-list li:last-child {
+  border: none;
+  padding-bottom: 0;
 }
 .news-link {
   display: inline-block;
@@ -117,10 +135,50 @@ aside {
   font-size: 1.5rem;
   margin-bottom: 1.2rem;
 }
+.news-link:hover {
+  color: hsl(35, 77%, 62%);
+}
 .news-text {
   color: hsl(236, 13%, 42%);
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   line-height: 1.5;
+}
+
+.list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 4rem;
+  grid-column: 1 / -1;
+}
+.list-item {
+  display: flex;
+  gap: 2rem;
+}
+.list-item-img {
+  width: 8rem;
+}
+.list-item-no {
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: hsl(233, 8%, 79%);
+  margin-bottom: 1rem;
+}
+.list-item-link {
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.4rem;
+  color: hsl(240, 100%, 5%);
+  margin-bottom: 1rem;
+}
+.list-item-link:hover {
+  color: hsl(5, 85%, 63%);
+}
+.list-item-text {
+  font-size: 1.3rem;
+  line-height: 1.6;
+}
+footer {
+  margin-top: auto;
 }
 .attribution {
   font-size: 11px;
