--- a/style.css
+++ b/style.css
@@ -187,3 +187,26 @@ footer {
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
+
+@media (max-width: 60em) {
+  .container {
+    width: 90%;
+  }
+  .main-nav {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+  .nav-open .main-nav {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+  .btn-mobile-nav {
+    border: none;
+    background: none;
+  }
+  .icon-mobile-nav[name="close-outline"] {
+    display: none;
+  }
+}
