--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ html {
   background-color: hsl(36, 100%, 99%);
 }
 body {
-  height: 100vh;
   display: flex;
   justify-content: center;
 }
@@ -55,11 +54,21 @@ body {
 .main-nav a:hover {
   color: hsl(5, 85%, 63%);
 }
+.btn-mobile-nav {
+  z-index: 1000;
+  display: none;
+  border: none;
+  background: none;
+}
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
 .main {
   display: grid;
   grid-template-columns: 7fr 3fr;
   row-gap: 3rem;
   column-gap: 2.4rem;
+  margin-bottom: 8rem;
 }
 .main-article {
   display: grid;
@@ -71,7 +80,7 @@ body {
   width: 100%;
 }
 picture {
-  grid-column: 1 / 3;
+  grid-column: 1 / -1;
 }
 .main-article-title {
   color: hsl(240, 100%, 5%);
@@ -188,25 +197,76 @@ footer {
   color: hsl(228, 45%, 44%);
 }
 
-@media (max-width: 60em) {
+/* MOBILE */
+/* //////////////////////////// */
+/* //////////////////////////// */
+/* //////////////////////////// */
+/* //////////////////////////// */
+@media (max-width: 37.5em) {
   .container {
     width: 90%;
+    margin-top: 2rem;
+  }
+  .header {
+    justify-content: space-between;
+    margin-bottom: 2.4rem;
   }
   .main-nav {
+    width: 70%;
+    height: 100vh;
+    position: absolute;
+    background-color: hsl(36, 100%, 99%);
+    top: 0;
+    right: 0;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: -100px 0 50px 50px rgba(0, 0, 0, 0.5);
+
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
   }
+  .main-nav a {
+    font-size: 1.7rem;
+    color: hsl(240, 100%, 5%);
+    margin-left: 3rem;
+  }
+
   .nav-open .main-nav {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
   }
   .btn-mobile-nav {
+    display: block;
     border: none;
     background: none;
   }
-  .icon-mobile-nav[name="close-outline"] {
+  .nav-open .icon-mobile-nav[name="close-outline"] {
+    display: block;
+  }
+  .nav-open .icon-mobile-nav[name="menu-outline"] {
     display: none;
+  }
+  .main {
+    grid-template-columns: 1fr;
+    row-gap: 5.6rem;
+    margin-bottom: 6rem;
+  }
+  .main-article {
+    grid-template-columns: 1fr;
+    row-gap: 2rem;
+  }
+  .main-article-img {
+    width: 100%;
+  }
+  .main-article-text {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+    line-height: 1.6;
+  }
+  .list {
+    grid-template-columns: 1fr;
+    row-gap: 2.4rem;
   }
 }
