--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
   display: flex;
   align-items: center;
   margin-bottom: 4rem;
+  position: relative;
 }
 .logo {
   margin-right: auto;
@@ -218,7 +219,7 @@ footer {
     height: 100vh;
     position: absolute;
     background-color: hsl(36, 100%, 99%);
-    top: 0;
+    top: -2rem;
     right: 0;
     transform: translateX(100%);
     transition: all 0.5s;
